--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,17 +1,18 @@
 <resources>
     <!--
+    TODO: Before you run your application, you need a Google Maps API key.
 
     To get one, follow this link, follow the directions and press "Create" at the end:
 
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=33:5F:FD:3C:33:11:A3:07:3D:14:6F:22:A8:9E:24:DE:0D:0D:AA:4F%3Bcom.b.gpshelperbreda
+    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=57:47:A2:5D:2E:D4:84:9D:3F:F3:6A:79:A4:38:A6:23:C0:D3:22:DF%3Bcom.example.ns_to_go
 
     You can also add your credentials to an existing key, using these values:
 
     Package name:
-    33:5F:FD:3C:33:11:A3:07:3D:14:6F:22:A8:9E:24:DE:0D:0D:AA:4F
+    57:47:A2:5D:2E:D4:84:9D:3F:F3:6A:79:A4:38:A6:23:C0:D3:22:DF
 
     SHA-1 certificate fingerprint:
-    33:5F:FD:3C:33:11:A3:07:3D:14:6F:22:A8:9E:24:DE:0D:0D:AA:4F
+    57:47:A2:5D:2E:D4:84:9D:3F:F3:6A:79:A4:38:A6:23:C0:D3:22:DF
 
     Alternatively, follow the directions here:
     https://developers.google.com/maps/documentation/android/start#get-key
